--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MANGI</title>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <h1>MANGI</h1>
+      <h1>MANGI</h1>
 
-        <div>
-            <input type="text" placeholder="Usuário">
-            <input type="password" placeholder="Senha">
-        </div>
+      <div>
+        <form method="post">
+          {% if error %}
+              <p style="color: red;">{{ error }}</p>
+          {% endif %}
+
+          <input type="email" placeholder="Email" id="email" name="email" required/>
+          <input type="password" placeholder="Senha" id="password" name="password" required/>
+          <button type="submit">Entrar</button>
+        </form>
+      </div>
     </div>
-</body>
+  </body>
 </html>
