catálogo de restaurantes finalizado

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
       <h1>MANGI</h1>
 
       <div>
-        <form method="post">
+        <form method="POST">
           {% if error %}
               <p style="color: red;">{{ error }}</p>
           {% endif %}
