--- a/templates/order_pannel.html
+++ b/templates/order_pannel.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MANGI</title>
 </head>
 <body>
+    <form action="{{ url_for('report') }}" method="get">
+        <button type="submit">REPORT</button>
+    </form>
+    <form action="{{ url_for('logout') }}" method="get">
+        <button type="submit">LOGOUT</button>
+    </form>
+    
+
     <h1>Pedidos</h1>
     <ul>
         {% for order in orders %}
@@ -13,7 +21,6 @@
                 <li>
                     <p>PEDIDO {{ order.order_id[:5] }}:</p> {#mostra apenas os 5 primeiros caracteres(UUID comprido tava poluíndo muito a tela)**/#}
                     <p>CLIENTE {{order.client}}</p>
-                    <p>STATUS: {{order.status}}</p>
                     <ul>
                         {% for product in order.product_details %}
                             <li>{{ product.name }} - {{ product.quantity }}</li>
@@ -22,19 +29,12 @@
                         <form method="POST" action="{{ url_for('order_pannel') }}">
                         <input type="hidden" name="order_id" value="{{ order.order_id }}">
                             {% if order.status == 0 %}
-                                <p>Criado 0</p>
                                 <button type="submit" name="action" value="1">ACEITAR</button>
                                 <button type="submit" name="action" value="4">RECUSAR</button>
                             {% elif order.status == 1 %}
-                                <p>Aceito 1</p>
                                 <button type="submit" name="action" value="2">ENTREGA EM ANDAMENTO</button>
                             {% elif order.status == 2 %}
-                                <p>Saiu p entrega 2</p>
                                 <button type="submit" name="action" value="3">ENTREGUE</button>
-                            {% elif order.status == 3 %}
-                                <p>Entregue 3 (n devo mostrar)</p>
-                            {% elif order.status == 4 %}
-                                <p>Recusado 4 (n devo mostrar)</p>
                             {% endif %}
                         </form>
                     </ul>
