--- a/templates/order_pannel.html
+++ b/templates/order_pannel.html
@@ -14,33 +14,37 @@
     </form>
     
 
-    <h1>Pedidos</h1>
     <ul>
-        {% for order in orders %}
-            {% if order.status != 3 and order.status != 4 %}
-                <li>
-                    <p>PEDIDO {{ order.order_id[:5] }}:</p> {#mostra apenas os 5 primeiros caracteres(UUID comprido tava poluíndo muito a tela)#}
-                    <p>CLIENTE {{order.client}}</p>
-                    <ul>
-                        {% for product in order.product_details %}
-                            <li>{{ product.name }} - {{ product.quantity }}</li>
-                        {% endfor %}
+        {% if user != 1 %}
+        <h1>Pedidos</h1>
+            {% for order in orders %}
+                {% if order.status != 3 and order.status != 4 %}
+                    <li>
+                        <p>PEDIDO {{ order.order_id[:5] }}:</p> {#mostra apenas os 5 primeiros caracteres(UUID comprido tava poluíndo muito a tela)#}
+                        <p>CLIENTE {{order.client}}</p>
+                        <ul>
+                            {% for product in order.product_details %}
+                                <li>{{ product.name }} - {{ product.quantity }}</li>
+                            {% endfor %}
 
-                        <form method="POST" action="{{ url_for('order_pannel') }}">
-                        <input type="hidden" name="order_id" value="{{ order.order_id }}">
-                            {% if order.status == 0 %}
-                                <button type="submit" name="action" value="1">ACEITAR</button>
-                                <button type="submit" name="action" value="4">RECUSAR</button>
-                            {% elif order.status == 1 %}
-                                <button type="submit" name="action" value="2">ENTREGA EM ANDAMENTO</button>
-                            {% elif order.status == 2 %}
-                                <button type="submit" name="action" value="3">ENTREGUE</button>
-                            {% endif %}
-                        </form>
-                    </ul>
-                </li>
-            {% endif %}
-        {% endfor %}
+                            <form method="POST" action="{{ url_for('order_pannel') }}">
+                            <input type="hidden" name="order_id" value="{{ order.order_id }}">
+                                {% if order.status == 0 %}
+                                    <button type="submit" name="action" value="1">ACEITAR</button>
+                                    <button type="submit" name="action" value="4">RECUSAR</button>
+                                {% elif order.status == 1 %}
+                                    <button type="submit" name="action" value="2">ENTREGA EM ANDAMENTO</button>
+                                {% elif order.status == 2 %}
+                                    <button type="submit" name="action" value="3">ENTREGUE</button>
+                                {% endif %}
+                            </form>
+                        </ul>
+                    </li>
+                {% endif %}
+            {% endfor %}
+        {% else %} {# admin user #}
+            <p>ADMIN</p>
+        {% endif %}
     </ul>
 </body>
 </html>
