base do relatório de vendas concluído

--- a/templates/order_pannel.html
+++ b/templates/order_pannel.html
@@ -42,7 +42,7 @@
                     </li>
                 {% endif %}
             {% endfor %}
-        {% else %} {# admin user #}
+        {% else %}
             <p>ADMIN</p>
         {% endif %}
     </ul>
