--- a/templates/report.html
+++ b/templates/report.html
@@ -12,5 +12,37 @@
     <form action="{{ url_for('order_pannel') }}" method="GET">
         <button type="submit">PEDIDOS</button>
     </form>
+
+    <div>
+        {% if user != 1 %}
+            <h1>Relatório do Restaurante</h1>
+
+            <p>1. Ticket médio: {{average_ticket}}</p>
+            
+            <p>2. Maior compra (valor): R$ {{ '%.2f' | format(most_expensive_order[1] / 100) }}</p>
+            <p>Pedido: {{most_expensive_order[0]}}</p>
+
+            <p>3. Maior pedido (quantidade): {{biggest_order_in_quantity[0]}}</p>
+            <p>Produto: {{biggest_order_in_quantity[1]}} </p>
+            <p>Quantidade: {{biggest_order_in_quantity[2]}}</p>
+
+            <p>5. Produto mais pedido: {{most_ordered_product[0]}}</p>
+            <p>Quantidade: {{most_ordered_product[1]}}</p>]
+
+            <p>6. Quantos pedidos em cada status:</p>
+            <p>Criado:</p>
+                <p>{{quantity_of_products_per_status[0][0]}}</p
+            <p>Aceito:</p>               
+                <p>{{quantity_of_products_per_status[0][1]}}</p>                
+            <p>Saiu para entrega:</p>
+                <p>{{quantity_of_products_per_status[0][2]}}</p>
+            <p>Entregue:</p>
+                <p>{{quantity_of_products_per_status[0][3]}}</p>
+            <p>Rejeitado:</p>
+                <p>{{quantity_of_products_per_status[0][4]}}</p>
+        {% else %}
+            <p>ADMIN</p>
+        {% endif %}
+    </div>
 </body>
 </html>
