--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
     <title>MANGI</title>
 </head>
 <body>
-    <div>
+    <div class="container">
         <h1>MANGI</h1>
-        <button onclick="window.location.href='/login'">Fazer login</button>
+        <button class="login_btn" onclick="window.location.href='/login'">Fazer login</button>
     </div>
 </body>
 </html>
