--- a/templates/order_pannel.html
+++ b/templates/order_pannel.html
@@ -3,48 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='order_pannel.css') }}">
     <title>MANGI</title>
 </head>
 <body>
-    <form action="{{ url_for('report') }}" method="get">
-        <button type="submit">REPORT</button>
-    </form>
-    <form action="{{ url_for('logout') }}" method="get">
-        <button type="submit">LOGOUT</button>
-    </form>
     
-
-    <ul>
-        {% if user != 1 %}
-        <h1>Pedidos</h1>
+    <div class="container">
+        <ul>
+            {% if user != 1 %}
+            <h1>Pedidos</h1>
             {% for order in orders %}
-                {% if order.status != 3 and order.status != 4 %}
-                    <li>
-                        <p>PEDIDO {{ order.order_id[:5] }}:</p> {#mostra apenas os 5 primeiros caracteres(UUID comprido tava poluíndo muito a tela)#}
-                        <p>CLIENTE {{order.client}}</p>
-                        <ul>
-                            {% for product in order.product_details %}
-                                <li>{{ product.name }} - {{ product.quantity }}</li>
-                            {% endfor %}
-
-                            <form method="POST" action="{{ url_for('order_pannel') }}">
+            {% if order.status != 3 and order.status != 4 %}
+            <div class="container_order">
+                <li>
+                    <p>PEDIDO {{ order.order_id[:5] }}:</p> {#mostra apenas os 5 primeiros caracteres(UUID comprido tava poluíndo muito a tela)#}
+                    <p>CLIENTE {{order.client}}</p>
+                    <ul>
+                        {% for product in order.product_details %}
+                        <li>{{ product.name }} - {{ product.quantity }}</li>
+                        {% endfor %}
+                        <form method="POST" action="{{ url_for('order_pannel') }}">
                             <input type="hidden" name="order_id" value="{{ order.order_id }}">
-                                {% if order.status == 0 %}
-                                    <button type="submit" name="action" value="1">ACEITAR</button>
-                                    <button type="submit" name="action" value="4">RECUSAR</button>
-                                {% elif order.status == 1 %}
-                                    <button type="submit" name="action" value="2">ENTREGA EM ANDAMENTO</button>
-                                {% elif order.status == 2 %}
-                                    <button type="submit" name="action" value="3">ENTREGUE</button>
-                                {% endif %}
-                            </form>
-                        </ul>
-                    </li>
-                {% endif %}
+                            {% if order.status == 0 %}
+                            <div>
+                                <button class="action_btn" type="submit" name="action" value="1">ACEITAR</button>
+                                <button class="action_btn" type="submit" name="action" value="4">RECUSAR</button>
+                            </div>
+                            {% elif order.status == 1 %}
+                            <div><button class="action_btn" type="submit" name="action" value="2">ENTREGA EM ANDAMENTO</button></div>
+                            {% elif order.status == 2 %}
+                            <div><button class="action_btn" type="submit" name="action" value="3">ENTREGUE</button></div>
+                            {% endif %}
+                        </form>
+                    </ul>
+                </li>
+            </div>
+            {% endif %}
             {% endfor %}
-        {% else %}
+            {% else %}
             <p>ADMIN</p>
-        {% endif %}
-    </ul>
+            {% endif %}
+        </ul>
+
+        <form action="{{ url_for('report') }}" method="get">
+            <button type="submit" class="default_btn">REPORT</button>
+        </form>
+        <form action="{{ url_for('logout') }}" method="get">
+            <button type="submit" class="default_btn">LOGOUT</button>
+        </form>
+    </div>
 </body>
 </html>
