--- a/static/index.css
+++ b/static/index.css
@@ -14,6 +14,10 @@ html{
     background-color: rgb(247, 232, 232);
     width: 100%;
     height: 100%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
@@ -35,7 +39,7 @@ html{
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    width: 10%;
+    width: 150px;
 }
 
 .login_btn:hover {
