--- a/static/login.css
+++ b/static/login.css
@@ -14,6 +14,10 @@ html{
     background-color: rgb(247, 232, 232);
     width: 100%;
     height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
@@ -22,9 +26,6 @@ html{
     justify-content: center;
     align-items: center;
     background-color: rgb(247, 232, 232);
-
-    width: 100vw;
-    height: 100vh;
 }
 
 h1 {
@@ -43,8 +44,8 @@ h1 {
     gap: 10px;
 
     border-radius: 8px;
-    width: 15%;
-    height: 30%;
+    width: 300px;
+    height: 300px;
 }
 
 .login_btn {
