--- a/static/order_pannel.css
+++ b/static/order_pannel.css
@@ -24,8 +24,7 @@ html{
     align-items: center;
     background-color: rgb(247, 232, 232);
 
-    width: 100%;
-    height: 100%;
+    margin-top: 100px;
 }
 
 h1 {
@@ -66,6 +65,13 @@ h1 {
     border-radius: 8px;
 }
 
+.item{
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+}
+
 ul, ol {
     list-style: none;
 }
@@ -84,4 +90,8 @@ ul, ol {
     background-color: #555;
     transform: scale(1.05);
     transition: transform 0.2s ease-in-out;
-} 
+}
+
+ul{
+    width: 50%;
+}
